gitops/seerr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seerr
  labels:
    app: seerr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seerr
  template:
    metadata:
      labels:
        app: seerr
    spec:
      containers:
      - name: seerr
        image: seerr/seerr:develop
        imagePullPolicy: Always
        ports: 
        - containerPort: 5055
        volumeMounts:
        - name: seerr-config
          mountPath: /app/config
      volumes:
      - name: seerr-config
        persistentVolumeClaim:
          claimName: seerr-config
