gitops/seerr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: seerr
spec:
  ports:
  - name: app
    port: 80
    targetPort: 5055
    protocol: TCP
    appProtocol: http
  selector:
    app: seerr
