gitops/seerr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: seerr
  namespace: seerr
spec:
  parentRefs:
  - name: main
    namespace: cilium-gateway
    sectionName: https-seerr
  - name: main
    namespace: cilium-gateway
    sectionName: https-sync-lt
  hostnames:
  - seerr.sync.lt
  - sync.lt
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: seerr
      port: 80
