gitops/seerr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seerr
  namespace: seerr
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - sync.lt
    - seerr.sync.lt
    secretName: seerr-letsencrypt
  rules:
  - host: sync.lt
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: seerr
            port:
              name: app
  - host: seerr.sync.lt
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: seerr
            port:
              name: app
